<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weather App</string>
    <string name="currentTemperature">18</string>
    <string name="currentCityName">UFA</string>
    <string name="currentDay">MONDAY</string>
    <string name="currentDate">AUG 30</string>
    <string name="currentTime">12:30</string>
    <string name="hintSearchCity">City</string>
    <string name="celsius" translatable="false">\u2103</string>
    <string name="fahrenheit" translatable="false">\u2109</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>

    <string name="menu_select_city">Select city</string>
    <string name="menu_help">Help</string>
    <string name="menu_home">Home</string>
    <string name="menu_location">Location</string>
    <string name="menu_settings">Settings</string>

    <string name="settings_NightMode">Night Mode</string>
    <string name="settings_Notice">Notifications</string>
    <string name="settings_TempEU">Temperature</string>
    <string name="settings_WindEU">Wind power</string>
    <string name="settings_PressureEU">Pressure</string>
    <string name="settings_EUText">"Units of measurement"</string>
    <string name="settings_NoticeText">"These can be reports of sudden changes in the weather or warnings of the Ministry of Emergencies"</string>

    <string name="now">now</string>
    <string name="feeling">Feels like:</string>

</resources>