<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_home"
        android:icon="@android:drawable/edit_text"
        android:orderInCategory="300"
        android:title="@string/menu_home"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menu_location"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="300"
        android:title="@string/menu_location"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="300"
        android:title="@string/menu_settings"
        app:showAsAction="collapseActionView" />
</menu>

